packages/cashc/test/CashCompiler/ParseError/invalid_date.cash
pragma cashscript ^0.5.0;

contract Test() {
    function test() {
        int d = date("04/30/2014 05:30:00 PM");
        require(d == 0);
    }
}
